--- a/index.html
+++ b/index.html
@@ -8,43 +8,60 @@
         <meta name="author" content="Adam M Deeley">
         <link rel="icon" href="img/favicons/favicon.ico">
 
-        <title>Hello, World!</title>
+        <title>Portfolio Proto</title>
+
+        <!-- Bootstrap core CSS -->
         <link rel="stylesheet" type="text/css" href="css/style.css">
+
+        <!-- Custom JS and CSS -->
         <script src="js/src/index.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     </head>
 
     <body>
         <div class="site-wrapper bg-dark">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">&ltAD&gt</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav mr-auto nav-stacked">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Bio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                    </ul>
-                    <button class="btn btn-outline-success my-2">
-                        Contact Me
+            <header class="masthead clearfix">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                    <a class="navbar-brand" href="#">&ltAD&gt</a>
+                    <svg>
+                        <circle cx="50" cy="50" r="50"/>
+                    </svg>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
                     </button>
-                </div>
-            </nav>
+                    <div class="collapse navbar-collapse" id="navbarText">
+                        <ul class="navbar-nav mr-auto nav-stacked">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Bio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact</a>
+                            </li>
+                        </ul>
+                        <button class="btn btn-outline-success my-2">
+                            Contact Me
+                        </button>
+                    </div>
+                </nav>
+            </header>
             <main role="main" class="container">
-                <h1 class="text-center">Some Important Title</h1>
-                <p class="text-center lead">Some further information on the title</p>
+                <h1 class="text-center">Adam Deeley</h1>
+                <p class="text-center lead">Web Developer / Programmer</p>
                 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
                 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
             </main>
+            <footer class="footer">
+                <div class="container">
+                <hr class="break">
+                    <button class="btn btn-outline-success my-2">
+                        Contact Me
+                    </button>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
