--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         <div class="site-wrapper bg-dark">
             <header class="masthead clearfix">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <a class="navbar-brand" href="#">&ltAD&gt</a>
-                    <svg>
-                        <circle cx="50" cy="50" r="50"/>
+                    <svg width="50" height="50">
+                        <circle cx="25" cy="25" r="25" fill="white"/>
+                        <text x="4" y="36" font-family="Helvetica" font-size="30" fill="green">A/&gt</text>
+
                     </svg>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
