--- a/index.html
+++ b/index.html
@@ -22,24 +22,26 @@
         <div class="site-wrapper bg-dark">
             <header class="masthead clearfix">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <svg width="50" height="50">
-                        <circle cx="25" cy="25" r="25" fill="white"/>
-                        <text x="4" y="36" font-family="Helvetica" font-size="30" fill="green">A/&gt</text>
+                    <a href="#home">
+                        <svg width="50" height="50">
+                            <circle cx="25" cy="25" r="25" fill="white"/>
+                            <text x="4" y="36" font-family="Helvetica" font-size="30" fill="green">A/&gt</text>
 
-                    </svg>
+                        </svg>
+                    </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarText">
                         <ul class="navbar-nav mr-auto nav-stacked">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="#">Projects<span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Bio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
+                                <a class="nav-link" href="#">News</a>
                             </li>
                         </ul>
                         <button class="btn btn-outline-success my-2">
@@ -49,7 +51,7 @@
                 </nav>
             </header>
             <main role="main" class="container">
-                <h1 class="text-center">Adam Deeley</h1>
+                <h1 class="text-center fancy-title">ADAM DEELEY</h1>
                 <p class="text-center lead">Web Developer / Programmer</p>
                 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -58,9 +60,7 @@
             <footer class="footer">
                 <div class="container">
                 <hr class="break">
-                    <button class="btn btn-outline-success my-2">
-                        Contact Me
-                    </button>
+                    <p class="text-muted">&copy Adam M Deeley 2018</p>
                 </div>
             </footer>
         </div>
