Added a carousel to the main page to showcase selected projects.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="#home">
                         <svg width="50" height="50">
                             <circle cx="25" cy="25" r="25" fill="white"/>
-                            <text x="4" y="36" font-family="Helvetica" font-size="30" fill="green">A/&gt</text>
+                                <text x="4" y="35" font-family="Helvetica" font-size="30" fill="green">A/&gt</text>
 
                         </svg>
                     </a>
@@ -53,9 +53,45 @@
             <main role="main" class="container">
                 <h1 class="text-center fancy-title">ADAM DEELEY</h1>
                 <p class="text-center lead">Web Developer / Programmer</p>
-                <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-                <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+                <div id="projects" class="container-fluid h-100">
+                    <div id="projectCarousel" class="carousel slide border" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#projectCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#projectCarousel" data-slide-to="1" class="active"></li>
+                            <li data-target="#projectCarousel" data-slide-to="2" class="active"></li>
+                            <li data-target="#projectCarousel" data-slide-to="3" class="active"></li>
+            
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <a href="projects/project1.html">
+                                    <img class="d-block w-100" src="img/carousel/aroura.jpg" alt="First slide">
+                                </a>
+                            </div>
+                            <div class="carousel-item">
+                                <a href="projects/project2.html">
+                                    <img class="d-block w-100" src="img/carousel/blokes.jpg" alt="First slide">
+                                </a>
+                            </div>
+                            <div class="carousel-item">
+                                <a href="projects/project3.html">
+                                    <img class="d-block w-100" src="img/carousel/peas.jpg" alt="First slide">
+                                </a>
+                            </div>
+                            <div class="carousel-item">
+                                <a href="projects/project4.html">
+                                    <img class="d-block w-100" src="img/carousel/petersburg.jpg" alt="First slide">
+                                </a>
+                            </div>
+                            <a class="carousel-control-prev" href="#projectCarousel" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            </a>
+                            <a class="carousel-control-next" href="#projectCarousel" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </main>
             <footer class="footer">
                 <div class="container">
@@ -64,5 +100,8 @@
                 </div>
             </footer>
         </div>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
     </body>
 </html>
