Added project images and removed news from links.

--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,8 @@
                 </nav>
             </header>
             <main role="main" class="container">
-                <h1 class="text-center fancy-title">MY STORY SO FAR...</h1>
-                <p class="text-center lead">A little about my experience</p>
+                <h1 class="text-center fancy-title">Contact Me</h1>
+                <p class="text-center lead">I am available for freelance and corporate opportunities.</p>
             </main>
             <footer class="footer">
                 <div class="container">
