--- a/projects.html
+++ b/projects.html
@@ -35,18 +35,20 @@
                     <div class="collapse navbar-collapse" id="navbarText">
                         <ul class="navbar-nav mr-auto nav-stacked">
                             <li class="nav-item active">
-                                <a class="nav-link" href="projects.html">Projects<span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="bio.html">Bio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">News</a>
+                                <a class="nav-link" href="projects.html">Projects</a>
                             </li>
                         </ul>
-                        <button class="btn btn-outline-success my-2">
+                        <!-- To be implemented
+                        <button class="btn btn-outline-success my-2" href="contact.html">
                             Contact Me
                         </button>
+                    -->
                     </div>
                 </nav>
             </header>
