Added Project thumbnails to the projects page.

--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,19 @@
             <main role="main" class="container">
                 <h1 class="text-center fancy-title">PROJECTS</h1>
                 <p class="text-center lead">A selection of my projects and work so far</p>
+                <div class="main_inner">
+                    <img src="img/project_images/best_selling_authors.png" class="img-thumbnail">
+                    <img src="img/project_images/draughts.png" class="img-thumbnail">
+                    <img src="img/project_images/makeroom.png" class="img-thumbnail">
+                    <img src="img/project_images/maze.png" class="img-thumbnail">
+                    <img src="img/project_images/simon.png" class="img-thumbnail">
+                    <img src="img/project_images/the_fisherman.png" class="img-thumbnail">
+                    <img src="img/project_images/tic_tac_toe.png" class="img-thumbnail">
+                    <img src="img/project_images/twitch_hub.png" class="img-thumbnail">
+                    <img src="img/project_images/USA_GDP.png" class="img-thumbnail">
+                    <img src="img/project_images/birthday_problem.png" class="img-thumbnail">
+                    <img src="img/project_images/wiki_searcher.png" class="img-thumbnail">
+                </div>
             </main>
             <footer class="footer">
                 <div class="container">
