Updated the images on the carousel to project images.

--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <a href="projects/project1.html">
-                                    <img class="d-block w-100" src="img/carousel/aroura.jpg" alt="First slide">
+                                    <img class="d-block w-100" src="img/project_images/twitch_hub.png" alt="First slide">
                                 </a>
                             </div>
                             <div class="carousel-item">
                                 <a href="projects/project2.html">
-                                    <img class="d-block w-100" src="img/carousel/blokes.jpg" alt="First slide">
+                                    <img class="d-block w-100" src="img/project_images/USA_GDP.png" alt="First slide">
                                 </a>
                             </div>
                             <div class="carousel-item">
                                 <a href="projects/project3.html">
-                                    <img class="d-block w-100" src="img/carousel/peas.jpg" alt="First slide">
+                                    <img class="d-block w-100" src="img/project_images/simon.png" alt="First slide">
                                 </a>
                             </div>
                             <div class="carousel-item">
                                 <a href="projects/project4.html">
-                                    <img class="d-block w-100" src="img/carousel/petersburg.jpg" alt="First slide">
+                                    <img class="d-block w-100" src="img/project_images/tic_tac_toe.png" alt="First slide">
                                 </a>
                             </div>
                             <a class="carousel-control-prev" href="#projectCarousel" role="button" data-slide="prev">
