Added links to external project pages from the project carousel.

--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <a href="projects/project1.html">
+                                <a href="https://publisher-provision-63421.bitballoon.com/">
                                     <img class="d-block w-100" src="img/project_images/twitch_hub.png" alt="First slide">
                                 </a>
                             </div>
                             <div class="carousel-item">
-                                <a href="projects/project2.html">
-                                    <img class="d-block w-100" src="img/project_images/USA_GDP.png" alt="First slide">
+                                <a href="https://accountant-footing-61656.bitballoon.com/">
+                                    <img class="d-block w-100" src="img/project_images/best_selling_authors.png" alt="First slide">
                                 </a>
                             </div>
                             <div class="carousel-item">
-                                <a href="projects/project3.html">
+                                <a href="https://gallant-swanson-3b5d25.bitballoon.com/">
                                     <img class="d-block w-100" src="img/project_images/simon.png" alt="First slide">
                                 </a>
                             </div>
                             <div class="carousel-item">
-                                <a href="projects/project4.html">
+                                <a href="https://submariner-carter-40463.bitballoon.com">
                                     <img class="d-block w-100" src="img/project_images/tic_tac_toe.png" alt="First slide">
                                 </a>
                             </div>
