--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Adam M Deeley">
         <link rel="icon" href="img/favicons/favicon.ico">
 
-        <title>Portfolio Proto</title>
+        <title>Adam Deeley</title>
 
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -36,6 +36,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="projects.html">Projects</a>
                             </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="contact.html">Contact Me</a>
+                            </li>
                         </ul>
                         <!-- To be implemented
                         <button class="btn btn-outline-success my-2" href="contact.html">
@@ -47,7 +50,9 @@
             </header>
             <main role="main" class="container">
                 <h1 class="text-center fancy-title">Contact Me</h1>
-                <p class="text-center lead">I am available for freelance and corporate opportunities.</p>
+                <p class="text-center lead">Github: https://github.com/ADeeley </p>
+                <p class="text-center lead">Email: ad.deeley@gmail.com </p>
+                <p class="text-center lead"><a href="https://www.linkedin.com/in/adam-deeley-270a5a99/">LinkedIn</a></p>
             </main>
             <footer class="footer">
                 <div class="container">
