Exchanged max image size from css for BS class in HTML.

--- a/projects.html
+++ b/projects.html
@@ -54,55 +54,55 @@
                 <div class="row main_inner">
                     <div class="col-sm-4 thumbnail">
                         <h5>Book Sales Graph</h5>
-                        <img src="img/project_images/best_selling_authors.png" class="project_thumbnail">
+                        <img src="img/project_images/best_selling_authors.png" class="img-fluid img-thumbnail img-thumbnail">
                     </div>
                     <div class="col-sm-4 thumbnail">
                         <h5>Console Draughts</h5>
-                        <img src="img/project_images/draughts.png" class="project_thumbnail">
+                        <img src="img/project_images/draughts.png" class="img-fluid img-thumbnail">
                     </div>
                     <div class="col-sm-4 thumbnail">
                         <h5>Makeroom Game</h5>
-                        <img src="img/project_images/makeroom.png" class="project_thumbnail">
+                        <img src="img/project_images/makeroom.png" class="img-fluid img-thumbnail">
                     </div>
                 </div>
                     <div class="row">
                         <div class="col-sm-4 thumbnail">
                             <h5>Maze Generator</h5>
-                            <img src="img/project_images/maze.png" class="project_thumbnail">
+                            <img src="img/project_images/maze.png" class="img-fluid img-thumbnail">
                         </div>
                         <div class="col-sm-4 thumbnail">
                             <h5>Simon Says</h5>
-                            <img src="img/project_images/simon.png" class="project_thumbnail">
+                            <img src="img/project_images/simon.png" class="img-fluid img-thumbnail">
                         </div>
                         <div class="col-sm-4 thumbnail">
                             <h5>The Fisherman</h5>
-                            <img src="img/project_images/the_fisherman.png" class="project_thumbnail">
+                            <img src="img/project_images/the_fisherman.png" class="img-fluid img-thumbnail">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-4 thumbnail">
                             <h5>Tic Tac Toe</h5>
-                            <img src="img/project_images/tic_tac_toe.png" class="project_thumbnail">
+                            <img src="img/project_images/tic_tac_toe.png" class="img-fluid img-thumbnail">
                         </div>
                         <div class="col-sm-4 thumbnail">
                             <h5>Twitch Hub</h5>
-                            <img src="img/project_images/twitch_hub.png" class="project_thumbnail">
+                            <img src="img/project_images/twitch_hub.png" class="img-fluid img-thumbnail">
                         </div>
                         <div class="col-sm-4 thumbnail">
                             <h5>USA GDP Graph</h5>
-                            <img src="img/project_images/USA_GDP.png" class="project_thumbnail">
+                            <img src="img/project_images/USA_GDP.png" class="img-fluid img-thumbnail">
                         </div>
                     </div>
                     <div class="row">
 
                         <div class="col-sm-4 thumbnail">
                             <h5>Birthday Problem</h5>
-                            <img src="img/project_images/birthday_problem.png" class="project_thumbnail">
+                            <img src="img/project_images/birthday_problem.png" class="img-fluid img-thumbnail">
                         </div>
 
                         <div class="col-sm-4 thumbnail">
                             <h5>Wiki Searcher</h5>
-                            <img src="img/project_images/wiki_searcher.png" class="project_thumbnail">
+                            <img src="img/project_images/wiki_searcher.png" class="img-fluid img-thumbnail">
                         </div>
                     </div>
                 </div>
