Added project cards to the project page.

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                 </nav>
             </header>
             <main role="main" class="container">
-                <h1 class="text-center fancy-title">Contact Me</h1>
+                <h1 class="text-center fancy-title text-white">Contact Me</h1>
                 <p class="text-center lead">Github: https://github.com/ADeeley </p>
                 <p class="text-center lead">Email: ad.deeley@gmail.com </p>
                 <p class="text-center lead"><a href="https://www.linkedin.com/in/adam-deeley-270a5a99/">LinkedIn</a></p>
