--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                     </div>
                 </nav>
             </header>
-            <main role="main" class="container">
-                <h1 class="text-center fancy-title">ADAM DEELEY</h1>
+            <main role="main" class="container w-75">
+                <h1 class="text-center fancy-title text-white">ADAM DEELEY</h1>
                 <p class="text-center lead">Web Developer / Programmer</p>
-                <div id="projects" class="container-fluid h-100">
+                <div id="projects" class="container-fluid">
                     <div id="projectCarousel" class="carousel slide border" data-ride="carousel">
                         <ol class="carousel-indicators">
                             <li data-target="#projectCarousel" data-slide-to="1" class="active"></li>
