Changed the cards to card-columns.

--- a/projects.html
+++ b/projects.html
@@ -50,13 +50,16 @@
             <main role="main" class="container w-75">
                 <h1 class="text-center fancy-title text-white">PROJECTS</h1>
                 <p class="text-center lead">A selection of my projects and work so far</p>
-                <div class="card-group">
+                <div class="card-columns">
                     <div class="card">
                         <img src="img/project_images/best_selling_authors.png" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Books Sold Compared to Books Written</h5>
                             <p class="card-text">A graph build with D3 to show the relationship between the number of books an author has written to the number of books sold.</p>
                             <button class="btn btn-primary">Github Source</button>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Build using JS, D3</small>
                         </div>
                     </div>
                     <div class="card">
@@ -65,6 +68,9 @@
                             <h5>Console Draughts</h5>
                             <p class="card-text">Python implementation of draughts based in the console.</p>
                             <button class="btn btn-primary">Github Source</button>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Build using Python</small>
                         </div>
                     </div>
                     <div class="card">
@@ -76,15 +82,19 @@
                             </p>
                             <button class="btn btn-primary">Github Source</button>
                         </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Build using JS Canvas, P5JS</small>
+                        </div>
                     </div>
-                </div>
-                <div class="card-group">
                     <div class="card">
                         <img src="img/project_images/maze.png" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Maze Generator</h5>
                             <p class="card-text">Randomly generates a maze using recursive backtracking.</p>
                             <button class="btn btn-primary">Github Source</button>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Build using JS Canvas, P5JS</small>
                         </div>
                     </div>
                     <div class="card">
@@ -93,6 +103,9 @@
                             <h5 class="card-title">Simon Game</h5>
                             <p class="card-text">Repeat the pattern in this colour matching version of Simon Says.</p>
                             <button class="btn btn-primary">Github Source</button>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Built using JavaScript</small>
                         </div>
                     </div>
                     <div class="card">
@@ -104,15 +117,19 @@
                             </p>
                             <button class="btn btn-primary">Github Source</button>
                         </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Built using vanilla JavaScript</small>
+                        </div>
                     </div>
-                </div>
-                <div class="card-group">
                     <div class="card">
                         <img src="img/project_images/tic_tac_toe.png" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Tic Tac Toe</h5>
                             <p class="card-text">An implementation of the classic game.</p>
                             <button class="btn btn-primary">Github Source</button>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Built using vanilla JavaScript</small>
                         </div>
                     </div>
                     <div class="card">
@@ -121,6 +138,9 @@
                             <h5 class="card-title">Twitch Hub</h5>
                             <p class="card-text">A Twitch client to keep up with your favourite Twitch streamers.</p>
                             <button class="btn btn-primary">Github Source</button>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Built using JavaScript, JQuery</small>
                         </div>
                     </div>
                     <div class="card">
@@ -132,8 +152,10 @@
                             </p>
                             <button class="btn btn-primary">Github Source</button>
                         </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Built using vanilla JavaScript, D3</small>
+                        </div>
                     </div>
-                </div>
             </main>
             <footer class="footer">
                 <div class="container">
