Added the GitHub links to each card on the portfolio page.

--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,9 @@
                         <div class="card-body">
                             <h5 class="card-title">Books Sold Compared to Books Written</h5>
                             <p class="card-text">A graph build with D3 to show the relationship between the number of books an author has written to the number of books sold.</p>
-                            <button class="btn btn-primary">Github Source</button>
+                            <form action="https://github.com/ADeeley/Books_sold">
+                                <button class="btn btn-primary">Github Source</button>
+                            </form>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Build using JS, D3</small>
@@ -67,7 +69,10 @@
                         <div class="card-body">
                             <h5>Console Draughts</h5>
                             <p class="card-text">Python implementation of draughts based in the console.</p>
-                            <button class="btn btn-primary">Github Source</button>
+
+                            <form action="https://github.com/ADeeley/draughts">
+                                <button class="btn btn-primary">Github Source</button>
+                            </form>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Build using Python</small>
@@ -80,7 +85,10 @@
                             <p class="card-text">Inspired by a vintage Soviet arcade game I played, the aim of the game is to 
                                 allow the ball to fall to the bottom of the screen. 
                             </p>
-                            <button class="btn btn-primary">Github Source</button>
+
+                            <form action="https://github.com/ADeeley/makeroom">
+                                <button class="btn btn-primary">Github Source</button>
+                            </form>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Build using JS Canvas, P5JS</small>
@@ -91,7 +99,10 @@
                         <div class="card-body">
                             <h5 class="card-title">Maze Generator</h5>
                             <p class="card-text">Randomly generates a maze using recursive backtracking.</p>
-                            <button class="btn btn-primary">Github Source</button>
+
+                            <form action="https://github.com/ADeeley/the-maze">
+                                <button class="btn btn-primary">Github Source</button>
+                            </form>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Build using JS Canvas, P5JS</small>
@@ -102,7 +113,10 @@
                         <div class="card-body">
                             <h5 class="card-title">Simon Game</h5>
                             <p class="card-text">Repeat the pattern in this colour matching version of Simon Says.</p>
-                            <button class="btn btn-primary">Github Source</button>
+
+                            <form action="https://github.com/ADeeley/simon_game">
+                                <button class="btn btn-primary">Github Source</button>
+                            </form>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Built using JavaScript</small>
@@ -115,7 +129,10 @@
                             <p class="card-text">
                                 A strategic fishing game where your aim is to collect all the good fish, avoiding the bad ones.
                             </p>
-                            <button class="btn btn-primary">Github Source</button>
+
+                            <form action="https://github.com/ADeeley/the-fisherman">
+                                <button class="btn btn-primary">Github Source</button>
+                            </form>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Built using vanilla JavaScript</small>
@@ -126,7 +143,10 @@
                         <div class="card-body">
                             <h5 class="card-title">Tic Tac Toe</h5>
                             <p class="card-text">An implementation of the classic game.</p>
-                            <button class="btn btn-primary">Github Source</button>
+
+                            <form action="https://github.com/ADeeley/tic_tac_toe">
+                                <button class="btn btn-primary">Github Source</button>
+                            </form>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Built using vanilla JavaScript</small>
@@ -137,7 +157,10 @@
                         <div class="card-body">
                             <h5 class="card-title">Twitch Hub</h5>
                             <p class="card-text">A Twitch client to keep up with your favourite Twitch streamers.</p>
-                            <button class="btn btn-primary">Github Source</button>
+
+                            <form action="https://github.com/ADeeley/twitch_hub">
+                                <button class="btn btn-primary">Github Source</button>
+                            </form>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Built using JavaScript, JQuery</small>
@@ -150,7 +173,10 @@
                             <p class="card-text">
                                 A graph to show how the USA GDP changes over time. Measured per quarter.
                             </p>
-                            <button class="btn btn-primary">Github Source</button>
+
+                            <form action="https://github.com/ADeeley/d3-bar-chart">
+                                <button class="btn btn-primary">Github Source</button>
+                            </form>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Built using vanilla JavaScript, D3</small>
